# amlremesas

./: README.md  app.py  dependencies.txt  pyproject.toml  replit.nix  run.py  setup.bat  setup.sh
utils/: __init__.py  column_definitions.py  data_processing.py  export_utils.py  fixed_risk_indicators.py  network_analysis.py  pattern_detection.py  pdf_generator.py  risk_indicators.py  visualizations.py
utils/indicadores/: riesgo.py
