[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "fuzzywuzzy>=0.18.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pycountry>=24.6.1",
    "python-levenshtein>=0.27.1",
    "pytz>=2025.2",
    "rapidfuzz>=3.13.0",
    "reportlab>=4.3.1",
    "streamlit>=1.44.1",
    "xlsxwriter>=3.2.2",
]
